# task-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.envs/.dev/: .db.example  .django.example
.envs/.production/: .db.example  .django.example  .nginx-proxy-letsencrypt.example
.envs/.staging/: .db.example  .django.example  .nginx-proxy-letsencrypt.example
.github/workflows/: CI.yml  pytest-docker.yml
compose/: Dockerfile
locale/ru/LC_MESSAGES/: django.mo  django.po
static/task_manager/: style.css
static/task_manager/css/: style.css
task_manager/: admin.py  apps.py  filters.py  forms.py  models.py  settings.py  urls.py  views.py
task_manager/management/commands/: create_dummy_content.py
task_manager/migrations/: 0001_initial.py  0002_alter_label_created_on_alter_status_created_on_and_more.py  0002_remove_task_labels_task_label.py  0003_alter_label_options_alter_siteuser_options_and_more.py  0003_alter_siteuser_options.py
task_manager/tests/: conftest.py  fixtures.py  run-tests.sh  test_labels_crud.py  test_pages.py  test_server_responses.py  test_statuses_crud.py  test_task_filtering.py  test_tasks_crud.py  test_users_crud.py
task_manager/utils/: factories.py  misc.py  wait_for_postgres.py
task_manager/views/: __init__.py  auth.py  labels.py  mixins.py  pages.py  statuses.py  tasks.py  users.py
templates/: 400.html  403.html  404.html  500.html
templates/registration/: login.html  password_change.html  signup.html  user_delete.html  user_update.html
templates/task_manager/: base.html  index.html  label_create.html  label_delete.html  label_list.html  label_update.html  status_create.html  status_create_form.html  status_delete.html  status_list.html  status_update.html  status_update_form.html  task_create.html  task_create_form.html  task_delete.html  task_detail.html  task_list.html  task_update.html  tasks.html  user_list.html  users.html
