[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = "Task manager with Django backend"
authors = ["shitcoding <shitcoder@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
